--- a/apps/website/static/css/home/home.css
+++ b/apps/website/static/css/home/home.css
@@ -8,7 +8,7 @@
 }
 
 .navigate-main-section-wrapper a {
-    color: var(--color-primary);
+    text-decoration: none;
     font-size: 36px;
 }
 
