--- a/apps/website/static/css/main-dark.css
+++ b/apps/website/static/css/main-dark.css
@@ -1,13 +1,13 @@
 :root {
-    --color-primary: #333;
-    --color-secondary: #fff;
+    --color-primary: #121212;
+    --color-secondary: #dfdfdf;
     --color-accent: #fc8019;
 
     --color-favourite: rgb(238, 53, 53);
     --color-success: green;
     --color-error: red;
     --color-alert: orange;
-    --color-shadow: #777;
+    --color-shadow: #000;
     --color-disabled: #d3d3d3;
 
     --padding-small: 6px;
